--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gridfs-stream": "^1.1.1",
     "groq-sdk": "^0.7.0",
     "he": "^1.2.0",
+    "jsonrepair": "^3.12.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.4",
     "multer": "^1.4.5-lts.1",
